--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <label for="name">Name</label>
-        <input type="text" name="name" />
+        <input id="name" type="text" name="name" />
         
         <label for="message">Message</label>
-        <input type="text" name="message" />
+        <input id="message" type="text" name="message" />
         
-        <button id="submit"> Click Here! </button>
+        <button id="submit"> Click Here!! </button>
         <script src="main.js"></script>
   </body>
 </html>
