Styling the card, returning success and error feedback

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
         <link rel="stylesheet" href="button.css">
     </head>
     <body>
+        <select name="greeting" id="greeting">
+            <option value="Congratulations!">Congratulations!</option>
+            <option value="Great Job!">Great Job!</option>
+            <option value="Many Thanks!">Many Thanks!</option>
+            <option value="Thank You!">Thank You!</option>
+            <option value="Totally Awesome">Totally Awesome</option>
+            <option value="Very Happy">Very Happy</option>
+            <option value="Well Done">Well Done</option>
+            <option value="You Rock!">You Rock!</option>
+        </select>
         <label for="name">Name</label>
         <input id="name" type="text" name="name" />
         
