--- a/options.html
+++ b/options.html
@@ -6,6 +6,9 @@
 Chat Webhook URL:
 <input id="config" type="text">
 
+Your Name:
+<input id="nameUserConfig" type="text">
+
 <div id="status"></div>
 <button id="save">Save</button>
 
