Updating options to import and export and loading team members from the settings

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                         </select>
                     </li>
                     <li>  
-                        <label for="name">Name</label>
-                        <input type="text" id="name" placeholder="Enter your first name here">
-                    </li>                
+                        <label for="teamMembers">Team Members:</label>
+                        <select id="teamMembers"></select>
+                    </li>
                     <li>
                         <label for="message">Message</label>
                         <textarea placeholder="Insert your message here..." id="message" style="border:solid 1px black;" name="message"></textarea>
