--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Test Extension Options</title>
+    <title>Kudos App for Google Chat Configuration</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,12 +16,10 @@
                 <label for="nameUserConfig">Your Name:</label>
                 <input type="text" id="nameUserConfig" placeholder="Enter your Name">
             </li>
-
             <li id="teamMemberList">  
                 <label for="teamMembers">Team Members:</label>
                 <input type="text" id="nameUserConfig" placeholder="Enter team member name">
             </li>
-
         </ul>
     </div>    
 
@@ -31,6 +29,9 @@
 <br>
 <div id="status"></div>
 <button id="save">Save</button>
+<button id="export">Export Settings</button>
+Import: <input id="import" type="file" accept=".json"/>
+
 
 <script src="options.js"></script>
 </body>
