Updating icons for message, handling pointer bug on team members

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
                     <li>
                         <label for="greeting">Select your Greetings:</label>
                         <select name="greeting" id="greeting">
-                            <option value="Congratulations!">Congratulations!</option>
-                            <option value="Great Job!">Great Job!</option>
-                            <option value="Many Thanks!">Many Thanks!</option>
-                            <option value="Thank You!">Thank You!</option>
-                            <option value="Totally Awesome">Totally Awesome</option>
-                            <option value="Very Happy">Very Happy</option>
-                            <option value="Well Done">Well Done</option>
-                            <option value="You Rock!">You Rock!</option>
+                            <option value="congratulations">Congratulations!</option>
+                            <option value="greatJob">Great Job!</option>
+                            <option value="thankYou">Many Thanks!</option>
+                            <option value="awesome">Totally Awesome</option>
+                            <option value="happy">Very Happy</option>
+                            <option value="wellDone">Well Done</option>
+                            <option value="youRock">You Rock!</option>
                         </select>
                     </li>
                     <li>  
