creating readme and credits

--- a/options.html
+++ b/options.html
@@ -31,7 +31,27 @@
 <button id="export">Export Settings</button>
 Import: <input id="import" type="file" accept=".json"/>
 
+<div style="margin-top:10%">
+Credits to the Developers that helped create this extension:
 
+<br><br>Gustavo Silva
+<br>Henrique Richter
+<br>Jay Ferreira da Silva
+<br>Lucas Baldin
+<br>Phelipe Henrique Momesso Maglio
+<br>Thamires Agnes Pereira Rodrigues
+<br>Victor Hugo Fagundes De Carvalho
+
+<br><br>We use different icons in our Application that were made by talented people and you can support their work on:
+
+<br><a href="https://www.flaticon.com/free-icons/happy" title="happy icons">Happy icons created by Freepik - Flaticon</a>
+<br><a href="https://www.flaticon.com/free-icons/wow" title="wow icons">Wow icons created by Freepik - Flaticon</a>
+<br><a href="https://www.flaticon.com/free-icons/congratulation" title="congratulation icons">Congratulation icons created by Freepik - Flaticon</a>
+<br><a href="https://www.flaticon.com/br/icones-gratis/aplaudir" title="aplaudir ícones">Aplaudir ícones criados por Freepik - Flaticon</a>
+<br><a href="https://www.flaticon.com/br/icones-gratis/bem-feito" title="bem feito ícones">Bem feito ícones criados por Freepik - Flaticon</a>
+<br><a href="https://www.flaticon.com/free-icons/thank-you" title="thank you icons">Thank you icons created by rsetiawan - Flaticon</a>
+<br><a href="https://www.flaticon.com/free-icons/speaker" title="speaker icons">Speaker icons created by Freepik - Flaticon</a>
+<br><a href="https://www.flaticon.com/free-icons/kudos" title="kudos icons">Kudos icons created by Freepik - Flaticon</a>
 <script src="options.js"></script>
 </body>
 </html>
