updating to support multiple teams

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                         </select>
                     </li>
                     <li>  
+                        <label for="teamName">Team Name:</label>
+                        <select id="teamName"></select>
+                    </li>
+                    <li>  
                         <label for="teamMembers">Team Members:</label>
                         <select id="teamMembers"></select>
                     </li>
